--- a/res/menu/menu_main.xml
+++ b/res/menu/menu_main.xml
@@ -12,7 +12,7 @@
         android:showAsAction="ifRoom" />
     <item
         android:id="@+id/scout"
-        android:title="@string/your_scout"
+        android:title="@string/bball_profile"
         android:icon="@drawable/ic_menu_scout"
         android:showAsAction="ifRoom" />
     
