--- a/res/menu/menu_main.xml
+++ b/res/menu/menu_main.xml
@@ -7,7 +7,7 @@
         android:showAsAction="ifRoom" />
     <item
         android:id="@+id/statbook"
-        android:title="@string/statbook"
+        android:title="@string/stats"
         android:icon="@drawable/ic_menu_statbook"
         android:showAsAction="ifRoom" />
     <item
